# base36

./: .gitignore  CMakeLists.txt  README.md  base36.control.in
doc/: base36.md
research/: Makefile.orig  calculated.make  implicit.make  lib.make  pg_config.make  pgxs-info.md
src/: base36.c  base36.h
